--- a/frontend/src/components/credentials/credentials.css
+++ b/frontend/src/components/credentials/credentials.css
@@ -125,7 +125,20 @@
   outline: none;
   box-shadow: 0 0 0;
 }
+.credentials-email:invalid {
+  background-color: #1a2226;
+  border: none;
 
+  border-top: 0px;
+  width: 100%;
+  border-radius: 0px;
+  outline: 0;
+  margin-bottom: 20px;
+  padding-left: 0px;
+  color: #adaeaf;
+  font-size: 20px;
+  border-bottom: 2px solid red;
+}
 .form-control-label {
   font-size: 15px;
   color: #6c6c6c;
@@ -163,7 +176,7 @@
   text-align: right;
   float: right;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .image-holder {
     display: none;
   }
